@@ -7,13 +7,13 @@
  */
 package org.eclipse.recommenders.internal.news.rcp;
 
+import static java.util.concurrent.TimeUnit.HOURS;
 import static org.eclipse.recommenders.internal.news.rcp.Constants.*;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
-import java.util.Collections;
-import java.util.Map;
 import java.util.Objects;
 
 import org.eclipse.core.runtime.IConfigurationElement;
@@ -23,53 +23,41 @@ import org.eclipse.swt.graphics.Image;
 import org.eclipse.ui.plugin.AbstractUIPlugin;
 
 import com.google.common.base.Preconditions;
-import com.google.common.collect.Maps;
 
 public class FeedDescriptor implements Comparable<FeedDescriptor> {
 
     private final boolean defaultRepository;
     private final String id;
-    private final URL url;
+    private final URI uri;
     private final String name;
-    private final String pollingInterval;
+    private final long pollingInterval;
     private final String description;
     private final String iconPath;
-    private final Map<String, String> parameters;
     private final String contributedBy;
     private boolean enabled;
 
     public FeedDescriptor(FeedDescriptor that) {
-        this(that.getId(), that.getUrl().toString(), that.getName(), that.isEnabled(), that.isDefaultRepository(),
-                that.getPollingInterval(), that.getDescription(), that.getIconPath(), that.getParameters(),
-                that.getContributedBy());
+        this(that.getId(), that.getUri().toString(), that.getName(), that.isEnabled(), that.isDefaultRepository(),
+                that.getPollingInterval(), that.getDescription(), that.getIconPath(), that.getContributedBy());
     }
 
-    public FeedDescriptor(IConfigurationElement config, boolean enabled, String contributedBy) {
-        this(config.getAttribute(ATTRIBUTE_ID), config.getAttribute(ATTRIBUTE_URL), config.getAttribute(ATTRIBUTE_NAME),
-                enabled, true, config.getAttribute(ATTRIBUTE_POLLING_INTERVAL),
-                config.getAttribute(ATTRIBUTE_DESCRIPTION), config.getAttribute(ATTRIBUTE_ICON),
-                getParametersFromConfig(config), contributedBy);
+    public FeedDescriptor(String uri, String name, long pollingInterval) {
+        this(uri, uri, name, true, false, pollingInterval, null, null, null);
     }
 
-    public FeedDescriptor(String url, String name, String pollingInterval) {
-        this(url, url, name, true, false, pollingInterval, null, null, null, null);
-    }
-
-    private FeedDescriptor(String id, String url, String name, boolean enabled, boolean defaultRepository,
-            String pollingInterval, String description, String iconPath, Map<String, String> parameters,
-            String contributedBy) {
+    private FeedDescriptor(String id, String uri, String name, boolean enabled, boolean defaultRepository,
+            long pollingInterval, String description, String iconPath, String contributedBy) {
         Preconditions.checkNotNull(id);
-        Preconditions.checkArgument(isUrlValid(url), Messages.FEED_DESCRIPTOR_MALFORMED_URL);
+        Preconditions.checkArgument(isUrlValid(uri), Messages.FEED_DESCRIPTOR_MALFORMED_URL);
 
         this.id = id;
-        this.url = stringToUrl(url);
+        this.uri = stringToUrl(uri);
         this.name = name;
         this.enabled = enabled;
         this.defaultRepository = defaultRepository;
         this.pollingInterval = pollingInterval;
         this.description = description;
         this.iconPath = iconPath;
-        this.parameters = parameters;
         this.contributedBy = contributedBy;
     }
 
@@ -85,15 +73,15 @@ public class FeedDescriptor implements Comparable<FeedDescriptor> {
         return name;
     }
 
-    public URL getUrl() {
-        return url;
+    public URI getUri() {
+        return uri;
     }
 
     public String getDescription() {
         return description;
     }
 
-    public String getPollingInterval() {
+    public long getPollingInterval() {
         return pollingInterval;
     }
 
@@ -114,10 +102,6 @@ public class FeedDescriptor implements Comparable<FeedDescriptor> {
             return AbstractUIPlugin.imageDescriptorFromPlugin(Constants.PLUGIN_ID, iconPath).createImage();
         }
         return null;
-    }
-
-    public Map<String, String> getParameters() {
-        return this.parameters;
     }
 
     private String getIconPath() {
@@ -155,38 +139,36 @@ public class FeedDescriptor implements Comparable<FeedDescriptor> {
         return true;
     }
 
-    private static URL stringToUrl(String url) {
+    private static URI stringToUrl(String url) {
         try {
-            return new URL(url);
-        } catch (MalformedURLException e) {
-            // should never happen
+            return new URI(url);
+        } catch (URISyntaxException e) {
             Logs.log(LogMessages.ERROR_FEED_MALFORMED_URL, url);
             return null;
         }
     }
 
-    private static Map<String, String> getParametersFromConfig(IConfigurationElement config) {
-        if (config == null) {
-            return Collections.emptyMap();
-        }
-        IConfigurationElement[] urlParameters = config.getChildren(ATTRIBUTE_PARAMETERS);
-        if (urlParameters == null || urlParameters.length < 1) {
-            return Collections.emptyMap();
-        }
-        Map<String, String> result = Maps.newHashMap();
-        IConfigurationElement[] parameters = urlParameters[0].getChildren(ATTRIBUTE_PARAMETER);
-        if (parameters.length < 1) {
-            return Collections.emptyMap();
-        }
-        for (IConfigurationElement element : parameters) {
-            result.put(element.getAttribute(ATTRIBUTE_PARAMETER_KEY), element.getAttribute(ATTRIBUTE_PARAMETER_VALUE));
-        }
-
-        return result;
-    }
-
     @Override
     public int compareTo(FeedDescriptor that) {
         return this.getName().compareTo(that.getName());
+    }
+
+    public static FeedDescriptor fromConfigurationElement(IConfigurationElement config, boolean enabled, String contributedBy) {
+        String id = config.getAttribute(ATTRIBUTE_ID);
+        String uri = config.getAttribute(ATTRIBUTE_URI);
+        String name = config.getAttribute(ATTRIBUTE_NAME);
+        String pollingIntervalAttribute = config.getAttribute(ATTRIBUTE_POLLING_INTERVAL);
+        long pollingInterval;
+        if (pollingIntervalAttribute != null) {
+            pollingInterval = Long.parseLong(pollingIntervalAttribute);
+        } else {
+            pollingInterval = HOURS.toMinutes(8);
+        }
+        String description = config.getAttribute(ATTRIBUTE_DESCRIPTION);
+        String icon = config.getAttribute(ATTRIBUTE_ICON);
+
+        return new FeedDescriptor(id, uri, name,
+                enabled, true, pollingInterval,
+                description, icon, contributedBy);
     }
 }
